// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should hide the tab if hide prop is given 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c1 {
  background-color: transparent;
  border: none;
  padding: 8px 15px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1:hover {
  cursor: pointer;
}

.c1:focus {
  outline: none;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1 .sc-AykKD {
  margin-bottom: 5px;
}

.c0 {
  width: 100%;
  background-color: #ffffff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-shadow: 0 10px 10px -5px rgba(0,0,0,0.2);
  overflow-x: auto;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3 {
  padding: 10px;
  height: 100%;
}

.c3:focus {
  outline: none;
}

<div>
  <div
    class=""
    id="medly-tabs"
  >
    <div
      class="c0"
      id="medly-tabs-list"
    >
      <button
        aria-controls="panel-tab2"
        aria-selected="false"
        class="c1"
        id="tab2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span
          class="c2"
        >
          Edit
        </span>
      </button>
    </div>
    <div
      aria-labelledby="tab1"
      class="c3"
      id="medly-tabs-panel-tab1"
      role="tabpanel"
      tabindex="0"
    >
      Content for the add panel
    </div>
  </div>
</div>
`;

exports[`Tabs should not render when there is no children 1`] = `<div />`;

exports[`Tabs should render properly without any prop 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c1 {
  background-color: transparent;
  border: none;
  padding: 8px 15px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #F27221;
  border-bottom: 2px solid #F27221;
}

.c1:hover {
  cursor: pointer;
}

.c1:focus {
  outline: none;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1 .sc-AykKD {
  margin-bottom: 5px;
}

.c1 .sc-AykKD * {
  fill: #F27221;
}

.c3 {
  background-color: transparent;
  border: none;
  padding: 8px 15px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3:hover {
  cursor: pointer;
}

.c3:focus {
  outline: none;
}

.c3:disabled {
  cursor: not-allowed;
}

.c3 .sc-AykKD {
  margin-bottom: 5px;
}

.c0 {
  width: 100%;
  background-color: #ffffff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-shadow: 0 10px 10px -5px rgba(0,0,0,0.2);
  overflow-x: auto;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  padding: 10px;
  height: 100%;
}

.c4:focus {
  outline: none;
}

<div>
  <div
    class=""
    id="medly-tabs"
  >
    <div
      class="c0"
      id="medly-tabs-list"
    >
      <button
        aria-controls="panel-tab1"
        aria-selected="true"
        class="c1"
        id="tab1"
        role="tab"
        tabindex="0"
        type="button"
      >
        <span
          class="c2"
        >
          Add
        </span>
      </button>
      <button
        aria-controls="panel-tab2"
        aria-selected="false"
        class="c3"
        id="tab2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span
          class="c2"
        >
          Edit
        </span>
      </button>
    </div>
    <div
      aria-labelledby="tab1"
      class="c4"
      id="medly-tabs-panel-tab1"
      role="tabpanel"
      tabindex="0"
    >
      Content for the add panel
    </div>
  </div>
</div>
`;

exports[`Tabs should select expected tab on click on any tab, when only defaultActive prop is given 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c3 {
  background-color: transparent;
  border: none;
  padding: 8px 15px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #F27221;
  border-bottom: 2px solid #F27221;
}

.c3:hover {
  cursor: pointer;
}

.c3:focus {
  outline: none;
}

.c3:disabled {
  cursor: not-allowed;
}

.c3 .sc-AykKD {
  margin-bottom: 5px;
}

.c3 .sc-AykKD * {
  fill: #F27221;
}

.c1 {
  background-color: transparent;
  border: none;
  padding: 8px 15px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1:hover {
  cursor: pointer;
}

.c1:focus {
  outline: none;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1 .sc-AykKD {
  margin-bottom: 5px;
}

.c0 {
  width: 100%;
  background-color: #ffffff;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-shadow: 0 10px 10px -5px rgba(0,0,0,0.2);
  overflow-x: auto;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  padding: 10px;
  height: 100%;
}

.c4:focus {
  outline: none;
}

<div>
  <div
    class=""
    id="medly-tabs"
  >
    <div
      class="c0"
      id="medly-tabs-list"
    >
      <button
        aria-controls="panel-tab1"
        aria-selected="false"
        class="c1"
        id="tab1"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span
          class="c2"
        >
          Add
        </span>
      </button>
      <button
        aria-controls="panel-tab2"
        aria-selected="true"
        class="c3"
        id="tab2"
        role="tab"
        tabindex="0"
        type="button"
      >
        <span
          class="c2"
        >
          Edit
        </span>
      </button>
    </div>
    <div
      aria-labelledby="tab2"
      class="c4"
      id="medly-tabs-panel-tab2"
      role="tabpanel"
      tabindex="0"
    >
      Content for the edit panel
    </div>
  </div>
</div>
`;
